<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:ignore="hardcodedText,ButtonStyle,Autofill"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ivPokemon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:src="@drawable/pngegg"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Search your pokemon"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:textColor="@color/black"
            android:backgroundTint="#EDEDED"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="30dp"/>

        <Button
            android:id="@+id/btClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E43322"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="15dp"
            android:textColor="@color/white"
            android:text="Clear"
            tools:ignore="TextContrastCheck"
            android:paddingHorizontal="30dp"/>
    </LinearLayout>


    <TextView

        android:text="Pokemon Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="#086C7E"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIndex"
                android:text="@string/indexID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="10sp"/>

            <TextView
                android:id="@+id/tvPokeName"
                android:text="@string/pkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="10sp"/>

            <TextView
                android:id="@+id/tvType"
                android:text="@string/typeString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10sp"
                android:text="Base Stats: "
                android:textStyle="bold"
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/tvHP"
                android:text="@string/hpString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="15dp" />

            <TextView
                android:id="@+id/tvAttack"
                android:text="@string/attackString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="15dp" />

            <TextView
                android:id="@+id/tvDefense"
                android:text="@string/defenseString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="15dp" />

            <TextView
                android:id="@+id/tvSpecAttack"
                android:text="@string/specialAttString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="15dp" />

            <TextView
                android:id="@+id/tvSpecDef"
                android:text="@string/specDefString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="15dp" />

            <TextView
                android:id="@+id/tvSpeed"
                android:text="@string/speedString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="15dp" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>